--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@ Ribbon Style
 ----------------------*/
 .ribbon{
 	display: flex;
-	gap: 470px;
+	gap: 670px;
 	background-color: #FF900E1A;
 }
 .ribbon p{
@@ -136,4 +136,88 @@ Grid-Quick Style
 	color: #FFFFFF;
 	border: 0px solid #FF900E;
 	border-radius: 8px;
+}
+/*-----------------
+Features Style
+----------------------*/
+.features{
+	display: flex;
+	gap: 146px;
+	margin-top: 150px;
+}
+.feat-details{
+	display: flex;
+	flex-direction: column;
+	gap: 30px;
+	margin-left: 240px;
+}
+.feat-title{
+	display: flex;
+	gap: 26px;
+	align-items: center;
+}
+.feat-title .vertical-line{
+	width: 5px;
+	height: 106px;
+	background-color: #FF900E;
+}
+.feat-title h1{
+	width: 460px;
+	height: 106px;
+	font-size: 45px;
+	font-weight: 700;
+	color: #131313;
+	margin: 0px;
+}
+.feat-details p{
+	font-size: 16px;
+	font-weight: 400;
+	color: #727272;
+	width: 585px;
+	height: 80px;
+}
+.feat-main{
+	display: flex;
+	flex-direction: column;
+	gap: 40px;
+}
+.feat-para h2{
+	color: #131313;
+	font-size: 20px;
+	font-weight: 600px;
+	margin-bottom: 10px;
+}
+.feat-para p{
+	color: #727272;
+	font-size: 16px;
+	font-weight: 400;
+}
+.img-button{
+	margin-right: 240px;
+}
+.img-button img{
+	width: 700px;
+	height: 980px;
+}
+.img-button div{
+	background-color: #FF900E;
+	width: 260px;
+	height: 100px;
+	color: #FFFFFF;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	border-radius: 8px;
+	padding: 45px 42px;
+	margin: 0px;
+	transform: translateX(-92px) translateY(-123px);
+	}
+.img-button .ten{
+	font-weight: 700;
+	font-size: 65px;
+}
+.img-button .experience{
+	font-size: 25px;
+	font-weight: 500;
 }
